# excel_to_json_code

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
script/: linux.sh  win.cmd
src/: main.cpp
template/: cpp_cpp.hbs  cpp_h.hbs  template_help.txt
test/excel/: 工作表-副本.xlsx  工作表.xlsx
test/excel/next/: 工作表下一级.xlsx
